@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--This file is part of Chummer5a.
 
     Chummer5a is free software: you can redistribute it and/or modify
@@ -7693,7 +7693,7 @@
     </string>
     <string>
       <key>Message_KarmaNuyenExchange</key>
-      <text>Nuyen can only be exchanged in multiples of 2,000¥.</text>
+      <text>Nuyen can only be exchanged in multiples of {0}.</text>
     </string>
     <string>
       <key>MessageTitle_KarmaNuyenExchange</key>
